--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "md2html": "node md2html.js",
     "watch": "npm run test -- --watch",
     "build": "NODE_ENV=production webpack -p",
     "start": "webpack-dev-server"
@@ -21,9 +22,15 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "del": "^2.2.2",
+    "glob": "^7.1.2",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "marked": "^0.3.6",
+    "read-file": "^0.2.0",
     "style-loader": "^0.18.1",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "write": "^0.3.3"
   }
 }
