--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "css-loader": "^0.28.4",
     "del": "^2.2.2",
+    "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
